--- a/genindex.html
+++ b/genindex.html
@@ -173,6 +173,7 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#J"><strong>J</strong></a>
@@ -226,6 +227,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.canvas.html#TermTk.TTkCore.canvas.TTkCanvas.drawText">drawText() (TTkCanvas method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -273,8 +282,6 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.keyEvent">(TTkRadioButton method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox.keyEvent">(TTkSpinBox method)</a>
-</li>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.keyEvent">(TTkTabWidget method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -348,6 +355,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkCore.log.html#module-TermTk.TTkCore.log">TermTk.TTkCore.log</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.signal.html#module-TermTk.TTkCore.signal">TermTk.TTkCore.signal</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#module-TermTk.TTkCore.string">TermTk.TTkCore.string</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkCore.timer.html#module-TermTk.TTkCore.timer">TermTk.TTkCore.timer</a>
 </li>
@@ -463,8 +472,6 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.mouseDragEvent">(TTkSplitter method)</a>
 </li>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.mouseDragEvent">(TTkTabWidget method)</a>
-</li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget.mouseDragEvent">(TTkTestWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.window.html#TermTk.TTkWidgets.window.TTkWindow.mouseDragEvent">(TTkWindow method)</a>
@@ -492,8 +499,6 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.spinbox.html#TermTk.TTkWidgets.spinbox.TTkSpinBox.mousePressEvent">(TTkSpinBox method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.mousePressEvent">(TTkSplitter method)</a>
-</li>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.mousePressEvent">(TTkTabWidget method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.testwidget.html#TermTk.TTkTestWidgets.testwidget.TTkTestWidget.mousePressEvent">(TTkTestWidget method)</a>
 </li>
@@ -548,6 +553,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.label.html#TermTk.TTkWidgets.label.TTkLabel.paintEvent">(TTkLabel method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.paintEvent">(TTkLineEdit method)</a>
+</li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.menubar.html#TermTk.TTkWidgets.menubar.TTkMenuButton.paintEvent">(TTkMenuButton method)</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton.paintEvent">(TTkRadioButton method)</a>
 </li>
@@ -778,6 +785,13 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkCore.signal.html#module-TermTk.TTkCore.signal">module</a>
+</li>
+      </ul></li>
+      <li>
+    TermTk.TTkCore.string
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkCore.string.html#module-TermTk.TTkCore.string">module</a>
 </li>
       </ul></li>
       <li>
@@ -1189,6 +1203,8 @@
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkTestWidgets.logviewer.html#TermTk.TTkTestWidgets.logviewer.TTkLogViewer">TTkLogViewer (class in TermTk.TTkTestWidgets.logviewer)</a>
 </li>
+      <li><a href="autogen.TermTk/TermTk.TTkWidgets.menubar.html#TermTk.TTkWidgets.menubar.TTkMenuButton">TTkMenuButton (class in TermTk.TTkWidgets.menubar)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.menubar.html#TermTk.TTkWidgets.menubar.TTkMenuLayout">TTkMenuLayout (class in TermTk.TTkWidgets.menubar)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkWidgets.radiobutton.html#TermTk.TTkWidgets.radiobutton.TTkRadioButton">TTkRadioButton (class in TermTk.TTkWidgets.radiobutton)</a>
@@ -1245,8 +1261,6 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.scrollbar.html#TermTk.TTkWidgets.scrollbar.TTkScrollBar.wheelEvent">(TTkScrollBar method)</a>
-</li>
-        <li><a href="autogen.TermTk/TermTk.TTkWidgets.tabwidget.html#TermTk.TTkWidgets.tabwidget.TTkTabWidget.wheelEvent">(TTkTabWidget method)</a>
 </li>
       </ul></li>
   </ul></td>
